--- a/style.CSS
+++ b/style.CSS
@@ -83,7 +83,7 @@ nav ul li a.active{
 	border-radius: 6px;
 }
 
-.sec1{
+.first{
 	widows:100%;
 	height:100vh;
 	background:url(image1.jpg)no-repeat;
@@ -105,4 +105,28 @@ nav ul li a.active{
 
 .text{
 	appearance: none;
+}
+
+
+.formclass{
+	width: 800px;
+	background-color: rgb(0,0,0,0.2);
+	position: relative;
+	left: 200px;
+}
+.Patient_appoint{
+	width: 600px;
+	background-color: rgb(0,0,0,0.3);
+	margin: auto;
+	font-family: sans-serif;
+	color: #FFFFFF;
+	padding: 10px 0px 10px 0px;
+	border-radius: 15px 15px 0px 0px;
+	text-decoration: 15px 15px 0px 0px;
+}
+input{
+  width:200px;
+  text-decoration: 15px 15px 0px 0px;
+  display:inline;
+  height: 30px;
 }
